--- a/test-form.html
+++ b/test-form.html
@@ -1,10 +1,35 @@
+<!-- -->
+<!-- Add some way to transfer form input into button script-->
+
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <meta charset="utf-8">
-    <title>Sample Forms with Javascript</title>
+    <script>
+      src = "script.js";
+    </script>
+    <meta charset="utf-8" />
   </head>
+  <title>Tip Calculator</title>
   <body>
+    <!--
+           _ _ _     _   _     _
+           | (_) |   | | | |   (_)
+    ___  __| |_| |_  | |_| |__  _ ___
+   / _ \/ _` | | __| | __| '_ \| / __|
+  |  __/ (_| | | |_  | |_| | | | \__ \
+   \___|\__,_|_|\__|  \__|_| |_|_|___/
 
+  yes i had to copy every line of the above art but it still looks cool-->
+
+<input type="text" name="" value="" id="tipoutput">
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = some script??">
+Click</button>
+
+<p>Your tip is: </p>
+<p id="tipoutput"></p>
   </body>
 </html>
+
+
+                                     
