--- a/forms.html
+++ b/forms.html
@@ -15,7 +15,7 @@ Basic text form-->
     <form>
       <!--The `for` attribute connects the label to the `name` attr of the form
     The `value` attribute defines placeholder text
-  Note that the label can be hoisted above the input name - the label's for attr
+  Note that the label can be **hoisted** above the input name - the label's for attr
 can be called above the input defining the name -->
       <label for="textform">A Text Form</label>
       <br />
