--- a/test-form.html
+++ b/test-form.html
@@ -20,16 +20,16 @@
    \___|\__,_|_|\__|  \__|_| |_|_|___/
 
   yes i had to copy every line of the above art but it still looks cool-->
-
-<input type="text" name="" value="" id="tipoutput">
-<button type="button"
-onclick="document.getElementById('demo').innerHTML = some script??">
-Click</button>
-
-<p>Your tip is: </p>
-<p id="tipoutput"></p>
+    <form class="" action="index.html" method="post">
+    <input type="text" name="yourCheck" value="100,200,etc" id="yourCheck" />
+    </form>
+    <button
+      type="button"
+      onclick="document.getElementById('tipoutput').innerHTML = checkCalculator(input)"
+    >
+      Click
+      </button>
+    <p>Your tip is:</p>
+    <p id="tipoutput"></p>
   </body>
 </html>
-
-
-                                     
