Fixing calculator file

--- a/interestcalculator.html
+++ b/interestcalculator.html
@@ -83,18 +83,21 @@
        |_|_|_\_, | \__\___/\__,_\___|
              |__/                    
       (doesn't work)
-            let initial = form.money;
-            let years = form.months / 12;
-            let interest = form.interest / 100;
+      */
+            let initial = form.money.value;
+            let years = form.months.value / 12;
+            let interest = form.interest.value / 100;
 
             const myFunction = () => {
               let result = Math.round(initial * (1 + interest * years))
+              document.getElementById("initial").innerText = initial
+              document.getElementById("after").innerText = result
             }
 
             money.oninput = myFunction() {};
 
             interest.oninput = myFunction() {};
-            */
+
 
       //the solution code:
 
