--- a/interestcalculator.html
+++ b/interestcalculator.html
@@ -92,6 +92,11 @@
         let initial = form.money.value;
         let years = form.months.value / 12;
         let interest = form.interest.value / 100;
+        //cease running if the forms are empty:
+        if (!initial || !years || !interest) {return;}
+        //cease running if the forms are not numbers
+        if (isNaN(initial) || isNaN(years) || isNaN(interest)) {return;}
+
         let result = Math.round(initial * (1 + interest * years));
         document.getElementById("initial").innerText = initial;
         document.getElementById("after").innerText = result;
