Starting on a graphing...kinda...web app!  Will use CanvasJS tomorrow.

--- a/interestcalculator.html
+++ b/interestcalculator.html
@@ -105,6 +105,7 @@
       form.money.oninput = myFunction;
       form.months.onchange = myFunction;
       form.interest.oninput = myFunction;
+      //it appears initial `form` is not always necessary
     </script>
   </body>
 </html>
