--- a/bad-desmos.html
+++ b/bad-desmos.html
@@ -2,6 +2,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+    <script src="desmosscripts.js"></script>
+    <script src="canvasjs.min.js"></script>
     <style>
       body {
         font-style: Arial, Helvetica, sans-serif;
@@ -26,5 +28,4 @@
       <input type="submit" id = "submit" onclick="calc()" />
     </div>
   </body>
-  <script src="desmosscripts.js"></script>
 </html>
